--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { git = "https://github.com/tokio-rs/tokio" }
-async-std = "1.0.0"
+tokio = { git = "https://github.com/tokio-rs/tokio", rev = "27e5b41067d01c0c9fac230c5addb58034201a63" }
+async-std = "1.0.1"
 num_cpus = "1.11.0"
